--- a/CrystalBall/Properties/Resources.resx
+++ b/CrystalBall/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="bolacristal" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagenes\bolacristal.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bolaOcho" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagenes\bolaOcho.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="jesuitas" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagenes\jesuitas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
